# cpp-calculator

./: CMakeLists.txt  README.md
google_tests/: test1.cpp
src/: Calculator.cpp  Calculator.h  calculator.cpp  calculator.h  main.cpp  translator.cpp
src/utilities/: Translator.cpp  designer.cpp  designer.h  exceptions.h  expression_data.h  translator.cpp  translator.h
